missing semicolon again

--- a/.travis.yml
+++ b/.travis.yml
@@ -44,7 +44,7 @@ before_install:
       wget 'https://github.com/hendrik-cliqz/travis-homebrew-bottle/releases/download/boost-1.61-cxx11/boost-1.61.0_1.mavericks.bottle.1.tar.gz';
       brew install boost-1.61.0_1.mavericks.bottle.1.tar.gz;
       export PATH=$PATH:$HOME/library/python/2.7/bin/;
-      export KEYVI_BUILD_AND_TEST_PR="true"
+      export KEYVI_BUILD_AND_TEST_PR="true";
     fi
 
 install:
@@ -78,7 +78,7 @@ addons:
     - libstdc++-4.8-dev
 
 script:
-  - if [ "$KEYVI_BUILD_AND_TEST_PR"=="true" ]; then
+  - if [ "$KEYVI_BUILD_AND_TEST_PR" == "true" ]; then
     cd keyvi;
     scons -j 4 mode=$CONF;
     travis_wait $CONF/dictionaryfsa_unittests/dictionaryfsa_unittests;
