pulling docker image only for packaging builds

--- a/.travis.yml
+++ b/.travis.yml
@@ -41,7 +41,7 @@ before_install:
 
 install:
   - if [ "$CXX" = "g++" ]; then export CXX="g++-4.8" CC="gcc-4.8"; fi
-  - docker pull $DOCKER_IMAGE
+  - if [ "$PACKAGING" == "1" ]; then docker pull $DOCKER_IMAGE ; fi
 
 addons:
   apt:
