trying to build on mac os 10.10

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,13 +32,14 @@ env:
 matrix:
   include:
     - os: osx
+      osx_image: xcode7
       compiler: clang
       env: BUILD_TYPE=osx
 
 before_install:
-  - pip install --upgrade pip
-  - pip install twine pytest msgpack-python
   - if [ "$TRAVIS_OS_NAME" == "osx" ]; then ./travis/setup_osx.sh ; fi
+  - pip install --upgrade pip
+  - sudo pip install twine pytest msgpack-python
   - if [ "$CC" = "gcc" ] && [ "$CONF" = "coverage" ]; then pip install coveralls-merge cpp-coveralls ; fi
 
 install:
