--- a/.travis.yml
+++ b/.travis.yml
@@ -56,6 +56,7 @@ addons:
     - ubuntu-toolchain-r-test
 # disable, LLVM broken for now    - llvm-toolchain-precise-3.6
     - boost-latest
+    - mikepurvis/docs
     packages:
     - gcc-4.8
     - g++-4.8
