--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,6 @@ compiler:
 
 python:
   - 2.7
-  - 3.3
 
 sudo: required
 
@@ -40,6 +39,8 @@ matrix:
       osx_image: xcode7.3
       compiler: clang
       env: BUILD_TYPE=osx
+    - python: "3.3"
+      env: BUILD_TYPE=py_33
 
 before_install:
   - if [ "$TRAVIS_OS_NAME" == "osx" ]; then ./travis/setup_osx.sh ; fi
