--- a/.travis.yml
+++ b/.travis.yml
@@ -42,7 +42,7 @@ matrix:
     - python: "3.3"
       dist: trusty
       compiler: gcc
-      env: BUILD_TYPE=py_33
+      env: BUILD_TYPE=linux   CONF=release    ARCH=x86_64
 
 before_install:
   - if [ "$TRAVIS_OS_NAME" == "osx" ]; then ./travis/setup_osx.sh ; fi
