--- a/.travis.yml
+++ b/.travis.yml
@@ -20,13 +20,13 @@ services:
 
 env:
   matrix:
-    - BUILD_TYPE=linux      CONF=debug    ARCH=x86_64 PYTHON_VERSION=27
-    - BUILD_TYPE=linux      CONF=debug    ARCH=x86_64 PYTHON_VERSION=34
-    - BUILD_TYPE=linux      CONF=release  ARCH=x86_64 PYTHON_VERSION=27
-    - BUILD_TYPE=linux      CONF=release  ARCH=x86_64 PYTHON_VERSION=34
-    - BUILD_TYPE=linux      CONF=coverage ARCH=x86_64 PYTHON_VERSION=27
-    - BUILD_TYPE=manylinux  DOCKER_IMAGE=cliqz/keyvi-manylinux-builder    PYTHON_VERSION=27
-    - BUILD_TYPE=manylinux  DOCKER_IMAGE=cliqz/keyvi-manylinux-builder    PYTHON_VERSION=34
+    - BUILD_TYPE=linux      PYTHON_VERSION=27   CONF=debug      ARCH=x86_64
+    - BUILD_TYPE=linux      PYTHON_VERSION=34   CONF=debug      ARCH=x86_64
+    - BUILD_TYPE=linux      PYTHON_VERSION=27   CONF=release    ARCH=x86_64
+    - BUILD_TYPE=linux      PYTHON_VERSION=34   CONF=release    ARCH=x86_64
+    - BUILD_TYPE=linux      PYTHON_VERSION=27   CONF=coverage   ARCH=x86_64
+    - BUILD_TYPE=manylinux  PYTHON_VERSION=27   DOCKER_IMAGE=cliqz/keyvi-manylinux-builder
+    - BUILD_TYPE=manylinux  PYTHON_VERSION=34   DOCKER_IMAGE=cliqz/keyvi-manylinux-builder
     - BUILD_TYPE=sdist      PYTHON_VERSION=27
     - BUILD_TYPE=doc
   global:
