- added missing TPIE cmake flag

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O3 -DNDEBUG")
 set(CMAKE_CXX_FLAGS_COVERAGE "${CMAKE_CXX_FLAGS} -O0 --coverage")
 
 set(COMPILE_TEST OFF CACHE BOOL "")
+set(TPIE_PARALLEL_SORT 1 CACHE BOOL "")
 add_subdirectory(keyvi/3rdparty/tpie)
 
 
