--- a/.travis.yml
+++ b/.travis.yml
@@ -23,11 +23,11 @@ env:
     - BUILD_TYPE=linux      PYTHON_VERSION=27     CONF=debug      ARCH=x86_64
     - BUILD_TYPE=linux      PYTHON_VERSION=34     CONF=debug      ARCH=x86_64
     - BUILD_TYPE=linux      PYTHON_VERSION=35     CONF=debug      ARCH=x86_64
-    - BUILD_TYPE=linux      PYTHON_VERSION=pypy2  CONF=debug      ARCH=x86_64
+#    - BUILD_TYPE=linux      PYTHON_VERSION=pypy2  CONF=debug      ARCH=x86_64
     - BUILD_TYPE=linux      PYTHON_VERSION=27     CONF=release    ARCH=x86_64
     - BUILD_TYPE=linux      PYTHON_VERSION=34     CONF=release    ARCH=x86_64
     - BUILD_TYPE=linux      PYTHON_VERSION=35     CONF=release    ARCH=x86_64
-    - BUILD_TYPE=linux      PYTHON_VERSION=pypy2  CONF=release    ARCH=x86_64
+#    - BUILD_TYPE=linux      PYTHON_VERSION=pypy2  CONF=release    ARCH=x86_64
     - BUILD_TYPE=linux      PYTHON_VERSION=27     CONF=coverage   ARCH=x86_64
     - BUILD_TYPE=manylinux  PYTHON_VERSION=27     DOCKER_IMAGE=cliqz/keyvi-manylinux-builder
     - BUILD_TYPE=manylinux  PYTHON_VERSION=34     DOCKER_IMAGE=cliqz/keyvi-manylinux-builder
@@ -55,10 +55,10 @@ matrix:
       osx_image: xcode7.3
       compiler: clang
       env: BUILD_TYPE=osx PYTHON_VERSION=35
-    - os: osx
-      osx_image: xcode7.3
-      compiler: clang
-      env: BUILD_TYPE=osx PYTHON_VERSION=pypy2
+#    - os: osx
+#      osx_image: xcode7.3
+#      compiler: clang
+#      env: BUILD_TYPE=osx PYTHON_VERSION=pypy2
 
 before_install:
   - if [ "$TRAVIS_OS_NAME" == "osx" ]; then ./travis/setup_osx.sh ; fi
